--- a/appsscript.json
+++ b/appsscript.json
@@ -2,10 +2,9 @@
   "timeZone": "America/Mexico_City",
   "dependencies": {
     "libraries": [{
-      "userSymbol": "PL",
+      "userSymbol": "PromotionsLibraryPRODUCTION",
       "libraryId": "1y9ackD7MdSsUkiGd1Au7DvkAgYRn7vkraabnwv12WvIj9YEK1579k48F",
-      "version": "12",
-      "developmentMode": true
+      "version": "12"
     }]
   },
   "exceptionLogging": "STACKDRIVER",
